--- a/search-engine-rust/empty.html
+++ b/search-engine-rust/empty.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<header></header>
+  <header>
+    <title>Vitrax Search Engine</title>
+  <h1>Vitrax Search Engine</h1>
+  </header>
+<p>Welcome to Vitax search engine. Click below to search or navigate through our featured websites.</p>
 </body>
 </html>
   
