--- a/main-code/empty.html
+++ b/main-code/empty.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+  <header>
+    <title>Vitrax Search Engine</title>
+  <h1>Vitrax Search Engine</h1>
+  </header>
+<p>Welcome to Vitax search engine. Click below to search or navigate through our featured websites.</p>
+</body>
+</html>
+  
 
